remove home; add hero image and heading

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
-<div class="top-row hide-on-init" animateOnScroll animationName="animated slideInLeft">
+<div id="zeno-sama">
+  <div class="landing-view">
+    <app-greeter></app-greeter>
+  </div>
+</div>
+<!-- <div class="top-row hide-on-init" animateOnScroll animationName="animated slideInLeft">
   <div class="contact-button">
     <button class="btn btn-outline-primary button-responsive" routerLink="/contact">Let's talk</button>
   </div>
@@ -90,9 +95,9 @@
               </div>
               <div class="text-center" style="margin-right: auto; margin-left: auto; width: 70%">
                 <img src="{{ experience.image }}" alt="">
-                <h2>{{ experience.role }}</h2>
-                <!-- <b style="font-size: 20px"><b>{{ experience.name }}</b></p> -->
-                <p><i>{{ experience.date }}</i></p>
+                <h2>{{ experience.role }}</h2> -->
+<!-- <b style="font-size: 20px"><b>{{ experience.name }}</b></p> -->
+<!-- <p><i>{{ experience.date }}</i></p>
                 <p class="work-description-padding">{{ experience.description }}</p>
                 <p>Technologies:</p>
                 <p><b>{{ experience.technologies.join(', ') }}</b></p>
@@ -103,10 +108,10 @@
       </div>
     </mat-tab>
   </mat-tab-group>
-</mat-card>
+</mat-card> -->
 
 
-<div class="projects hide-on-init" animateOnScroll animationName="animated slideInLeft">
+<!-- <div class="projects hide-on-init" animateOnScroll animationName="animated slideInLeft">
   <mat-card class="project mat-elevation-z5">
     <mat-card-title>
       <h2>Projects</h2>
@@ -144,4 +149,4 @@
     <p><b>IDE's I love:</b> {{ about.laptopSetup.IDE }}</p>
     <p><b>Desktop Environment:</b> {{ about.laptopSetup.desktopEnvironment }}</p>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
