add project & skills section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,9 @@
     <app-greeter></app-greeter>
   </div>
   <div>
-    <p>hi</p>
+    <app-projects></app-projects>
+  </div>
+  <div>
+    <app-skills></app-skills>
   </div>
 </div>
