--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
-body, html {
+body,
+html {
     height: 100%;
     margin: 0 auto;
 }
@@ -19,7 +19,6 @@ a {
     padding: 1.3em;
     display: grid;
     grid-template-columns: 30% auto;
-
     a {
         color: white;
     }
@@ -29,4 +28,22 @@ section {
     width: 80%;
     margin: 0 auto;
     padding: 2em;
+}
+
+hr {
+    height: 0.5vh;
+    width: 25vh;
+    background-color: black;
+    margin-bottom: 10vh;
+    margin-top: 0;
+}
+
+.section-heading {
+    font-size: 5vh;
+    font-weight: bold;
+    display: block;
+}
+
+.content {
+    margin-top: 5vh;
 }
