change landing view heading + full width

--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,8 +1,8 @@
 <div style="height: 100vh" class="raised-box">
   <div class="hero-image">
     <div class="hero-text">
-      <span class="heading">Software</span>
-      <span class="sub-heading">Powers Everything</span>
+      <span class="heading">Hello, I'm Shehriyar Qureshi</span>
+      <span class="sub-heading">and I develop Software.</span>
     </div>
   </div>
 </div>
