--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -11,6 +11,7 @@
 /* Place text in the middle of the image */
 
 .hero-text {
+    width: 100%;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -22,13 +23,13 @@
 .heading {
     display: block;
     word-break: break-all;
-    font-size: 20vh;
-    text-shadow: 2px 3px #000000;
+    font-size: 3.5em;
+    text-shadow: 3px 3px #000000;
 }
 
 .sub-heading {
     display: block;
     word-break: break-all;
-    font-size: 10vh;
+    font-size: 3em;
     text-shadow: 2px 3px #000000;
 }
