--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,7 +1,8 @@
 .contact-container {
-    height: 100vh;
-    background-color: #ffffff;
+    height: 80vh;
+    background-color: #000000;
     overflow: auto;
+    clip-path: polygon(50% 0%, 100% 20%, 100% 100%, 0 100%, 0 20%);
 }
 
 .content {
@@ -14,20 +15,12 @@
 }
 
 .fa {
-    padding: 20px;
-    font-size: 20px;
-    width: 60px;
+    font-size: 3em;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin: 0 0.5em 0 0.5em;
     color: ivory;
-}
-
-.fa-instagram {
-    background-color: darkblue;
 }
 
 .fa-twitter {
@@ -35,15 +28,17 @@
 }
 
 .fa-linkedin {
-    background-color: rgb(0, 119, 181);
+    // background-color: rgb(0, 119, 181);
+    background-color: #000000;
 }
 
 .fa-github {
-    background-color: black;
+    background-color: #000000;
 }
 
 .fa-envelope {
-    background-color: rgb(255, 0, 149);
+    // background-color: rgb(255, 0, 149);
+    background-color: #000000;
 }
 
 .fa-medium {
@@ -51,7 +46,6 @@
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../../assets/images/tele1.jpg);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -72,4 +66,12 @@
 
 span {
     margin-top: 18px;
+}
+
+.section-heading {
+    color: white;
+}
+
+hr {
+    background-color: white;
 }
