--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -25,6 +25,8 @@
     word-break: break-all;
     font-size: 3.5em;
     text-shadow: 3px 3px #000000;
+    // animation-duration: 1s;
+    // animation-name: slide-in-left;
 }
 
 .sub-heading {
@@ -32,4 +34,6 @@
     word-break: break-all;
     font-size: 3em;
     text-shadow: 2px 3px #000000;
+    // animation-duration: 1s;
+    // animation-name: slide-in-right;
 }
