--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -20,25 +20,86 @@
 }
 
 .section-heading {
-    font-size: 5vh;
+    font-size: 3em;
     font-weight: bold;
     display: block;
 }
 
 .project-card {
-    margin: 5vh;
+    background-color: transparent;
+    width: 30em;
+    height: 17em;
+    perspective: 1000px;
+}
+
+.project-card-inner {
+    position: relative;
     width: 100%;
     height: 100%;
-    background-color: grey;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.project-card:hover .project-card-inner {
+    transform: rotateY(180deg);
+}
+
+.project-card-front,
+.project-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.project-card-front {
+    height: 100%;
+    width: 100%;
 }
 
 .project-image {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+    // background-image: url(../../../assets/images/some-project.jpg);
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    position: relative;
+    height: 100%;
+}
+
+.project-card-back {
+    background-color: #9fc824;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.project-name {
+    width: 40%;
+    text-align: center;
+    position: absolute;
+    top: 89%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 2.5em;
+    background-color: rgba(154, 199, 34, 0.5);
+}
+
+.project-title {
+    word-break: break-all;
+    display: block;
+}
+
+.back-card-title {
+    display: block;
+    word-break: break-all;
+    margin-top: 2vh;
+    font-size: 1.5em;
+}
+
+.back-description {
+    display: block;
+    word-break: break-all;
+    margin-top: 2vh;
+    font-size: 1.2em;
 }
 
 @keyframes slide-in {
