--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,10 +1,16 @@
-<div class="contact-container text-center">
+<div class="contact-container text-center" [@fullHeight]="isVisible ? '*' : 'void'">
   <div class="content">
     <span class="section-heading">Contact</span>
     <hr>
-    <a href="{{ links.github }}" class="fa fa-github"></a>
-    <a href="{{ links.medium }}" class="fa fa-medium"></a>
-    <a href="{{ links.linkedin }}" class="fa fa-linkedin"></a>
-    <a href="{{ links.email }}" class="fa fa-envelope"></a>
+    <div #socialLinks>
+      <a href="{{ links.github }}" class="fa fa-github"></a>
+      <a href="{{ links.medium }}" class="fa fa-medium"></a>
+      <a href="{{ links.linkedin }}" class="fa fa-linkedin"></a>
+      <a href="{{ links.email }}" class="fa fa-envelope"></a>
+    </div>
+    <div #projectTalk class="project-talk-container">
+      <button class="btn btn-primary project-talk-button">test button</button>
+      <button class="btn btn-primary project-talk-button">test button</button>
+    </div>
   </div>
 </div>
