--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,27 +2,10 @@
   <div class="content">
     <span #test class="section-heading" [@slideInLeft]="isVisible ? '*' : 'void'">Projects</span>
     <hr #test2 [@hrExtend]="isVisible2 ? '*' : 'void'">
-    <!-- <hr #test2> -->
-    <!-- I have to work this out, this should be done with *ngFor to make code simpler -->
     <div class="grid-container">
-      <div>
-        <div class="project-card">
-          <div class="project-card-inner">
-            <div class="project-card-front">
-              <div class="project-image">
-                <div class="project-name">
-                  <div class="backdrop">
-                    <span>Cannot be disclosed</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="project-card-back">
-              <span class="back-card-title">Cannot be disclosed</span>
-              <span class="back-description">Cannot be disclosed</span>
-            </div>
-          </div>
-        </div>
+      <div *ngFor="let project of projectService.projects">
+        <app-project-card [projectDetails]="project">
+        </app-project-card>
       </div>
     </div>
   </div>
