fix animation happening without trigger bug

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact-container text-center" [@fullHeight]="isVisible ? '*' : 'void'">
+<div class="contact-container text-center" [@fullHeight]="isVisible ? 'contactAnimation' : '*'">
   <div class="content">
     <span class="section-heading">Contact</span>
     <hr>
