add text sample over project card image

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,4 +1,7 @@
 <div class="project-card">
   <div class="image" [style.background-image]="backgroundImageValue">
+    <div class="project-name">
+      <span>{{ projectDetails.name }}</span>
+    </div>
   </div>
 </div>
