--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -1,14 +1,19 @@
 .project-card {
     height: 100%;
-    // background-color: grey;
     width: 100%;
 }
 
 .image {
-    // testing
-    // background-image: url(../../../assets/images/employeeManager.png);
     background-size: auto 20em;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+.project-name {
+    font-size: 3em;
+    position: absolute;
+    top: 75%;
+    left: 1%;
 }
