do some stuff with project card

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -4,7 +4,7 @@
 }
 
 .image {
-    background-size: auto 20em;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
@@ -12,6 +12,7 @@
 }
 
 .project-name {
+    color: white;
     font-size: 3em;
     position: absolute;
     top: 75%;
