--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .contact-container {
-    height: 80vh;
+    height: 46em;
     background-color: #000000;
     overflow: auto;
     clip-path: polygon(50% 0%, 100% 20%, 100% 100%, 0 100%, 0 20%);
@@ -24,7 +24,7 @@
 }
 
 .hero-image {
-    height: 100vh;
+    // height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
