--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -4,11 +4,14 @@
 }
 
 .image {
+    height: 0;
+    padding-top: 56.25%;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     position: relative;
+    margin: 0px auto 26px;
 }
 
 .project-name {
