--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,14 +1,13 @@
 .projects-container {
-    height: 100vh;
+    height: auto;
     background-color: #f7f7f7;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-template-rows: 20em;
-    margin: 0 30em 0 30em;
     grid-gap: 1em;
 }
 
@@ -18,7 +17,8 @@
 }
 
 .content {
-    margin-top: 5vh;
+    height: 40em;
+    margin: 5em 5em 5em 5em;
 }
 
 .section-heading {
