--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <span #heading class="section-heading" [@slideInLeft]="isHeadingVisible ? '*' : 'void'">Skills</span>
     <hr #underline [@hrExtend]="isUnderlineVisible ? '*' : 'void'">
-    <div class="d-flex justify-content-center skill-types-container">
+    <div class="d-flex justify-content-center">
       <app-skill-card [skillsList]="skillService.frontendSkills" [skillTitle]="'Front-End'"></app-skill-card>
       <app-skill-card [skillsList]="skillService.backendSkills" [skillTitle]="'Back-End'"></app-skill-card>
       <app-skill-card [skillsList]="skillService.databaseSkills" [skillTitle]="'Database'"></app-skill-card>
