--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,4 @@
-<div id="zeno-sama">
-  <div>
-    <app-greeter></app-greeter>
-  </div>
-  <div>
-    <app-projects></app-projects>
-  </div>
-  <div>
-    <app-skills></app-skills>
-  </div>
-  <div>
-    <app-contact></app-contact>
-  </div>
-</div>
+<app-greeter></app-greeter>
+<app-projects></app-projects>
+<app-skills></app-skills>
+<!-- <app-contact></app-contact> -->
