get contact button to work

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,8 +9,7 @@
       <a href="{{ links.email }}" class="fa fa-envelope"></a>
     </div>
     <div #projectTalk class="project-talk-container">
-      <button class="btn btn-primary project-talk-button">test button</button>
-      <button class="btn btn-primary project-talk-button">test button</button>
+      <button class="btn btn-outline-primary resume-button">Download Resume</button>
     </div>
   </div>
 </div>
