--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -61,3 +61,12 @@ hr {
 .project-talk-button {
     margin: 0 1em 0 1em;
 }
+
+.resume-button {
+    color: white;
+    border-color: white;
+}
+
+.resume-button:hover {
+    background-color: #08a503;
+}
