--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <app-greeter></app-greeter>
 <app-projects></app-projects>
 <app-skills></app-skills>
-<!-- <app-contact></app-contact> -->
+<app-contact></app-contact>
