--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ section {
 }
 
 hr {
-    height: 0.5vh;
+    height: 0.2em;
     width: 10%;
     background-color: black;
     margin-bottom: 10vh;
