--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,4 +1,5 @@
 .hero-image {
+    width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../../assets/images/hero.jpg);
     height: 100vh;
     background-position: center;
@@ -25,8 +26,9 @@
     word-break: break-all;
     font-size: 3.5em;
     text-shadow: 3px 3px #000000;
-    // animation-duration: 1s;
-    // animation-name: slide-in-left;
+    @media only screen and (max-width: 700px) {
+    font-size: 2em;
+    }
 }
 
 .sub-heading {
@@ -34,6 +36,7 @@
     word-break: break-all;
     font-size: 3em;
     text-shadow: 2px 3px #000000;
-    // animation-duration: 1s;
-    // animation-name: slide-in-right;
+    @media only screen and (max-width: 700px) {
+    font-size: 1.5em;
+    }
 }
