--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,11 +2,11 @@
   <div class="content">
     <span #heading class="section-heading" [@slideInLeft]="isHeadingVisible ? '*' : 'void'">Skills</span>
     <hr #underline [@hrExtend]="isUnderlineVisible ? '*' : 'void'">
-    <div class="d-flex justify-content-center">
-      <app-skill-card [skillsList]="skillService.frontendSkills" [skillTitle]="'Front-End'"></app-skill-card>
-      <app-skill-card [skillsList]="skillService.backendSkills" [skillTitle]="'Back-End'"></app-skill-card>
-      <app-skill-card [skillsList]="skillService.databaseSkills" [skillTitle]="'Database'"></app-skill-card>
-      <app-skill-card [skillsList]="skillService.otherSkills" [skillTitle]="'Other'"></app-skill-card>
+    <div class="d-flex justify-content-center skills-flex">
+      <app-skill-card class="skill-card-selector" [skillsList]="skillService.frontendSkills" [skillTitle]="'Front-End'"></app-skill-card>
+      <app-skill-card class="skill-card-selector" [skillsList]="skillService.backendSkills" [skillTitle]="'Back-End'"></app-skill-card>
+      <app-skill-card class="skill-card-selector" [skillsList]="skillService.databaseSkills" [skillTitle]="'Database'"></app-skill-card>
+      <app-skill-card class="skill-card-selector" [skillsList]="skillService.otherSkills" [skillTitle]="'Other'"></app-skill-card>
     </div>
   </div>
 </div>
