--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .contact-container {
-    height: 46em;
+    height: auto;
     background-color: #000000;
     overflow: auto;
     clip-path: polygon(50% 0%, 100% 20%, 100% 100%, 0 100%, 0 20%);
@@ -7,6 +7,7 @@
 
 .content {
     margin-top: 5vh;
+    height: 40em;
 }
 
 .mat-icon-button {
