--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -9,15 +9,17 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
     position: relative;
     margin: 0px auto 26px;
 }
 
 .project-name {
     color: white;
-    font-size: 3em;
     position: absolute;
     top: 75%;
     left: 1%;
+    font-size: 3em;
+    @media only screen and (max-width: 999px) {
+        font-size: 1.5em;
+    }
 }
