--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -13,12 +13,17 @@
 }
 
 .project-name {
-    color: white;
-    position: absolute;
-    top: 75%;
-    left: 1%;
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.project-description {
+    font-size: 1.5em;
+}
+
+.fa {
+    margin-top: 0.5em;
     font-size: 3em;
-    @media only screen and (max-width: 999px) {
-        font-size: 1.5em;
-    }
+    color: #673ab7;
 }
