--- a/src/app/components/skill-card/skill-card.component.html
+++ b/src/app/components/skill-card/skill-card.component.html
@@ -1,6 +1,8 @@
 <mat-card class="skill-card mat-elevation-z5">
   <mat-card-title>
-    {{ skillTitle }}
+    <div>
+      <span class="skill-title">{{ skillTitle }}</span>
+    </div>
   </mat-card-title>
   <mat-card-content>
     <div>
