--- a/src/app/components/skill-card/skill-card.component.scss
+++ b/src/app/components/skill-card/skill-card.component.scss
@@ -3,7 +3,13 @@
     width: 90%;
     margin-left: 1em;
     margin-right: 1em;
-    @media only screen and (max-width: 999px) {
+    @media only screen and (min-width: 450px) and  (max-width: 999px) {
+        width: 70%;
+        margin: auto;
+        margin-bottom: 1em;
+    }
+
+    @media only screen and (max-width: 450px) {
         width: 100%;
         margin: auto;
         margin-bottom: 1em;
