--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,9 @@
       <a href="{{ links.email }}" class="fa fa-envelope"></a>
     </div>
     <div #projectTalk class="project-talk-container">
-      <button class="btn btn-outline-primary resume-button">Download Resume</button>
+      <a href="assets/downloads/shehriyarQureshi.pdf" download="">
+        <button class="btn btn-outline-primary resume-button">Download Resume</button>
+      </a>
     </div>
   </div>
 </div>
