--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,6 +1,6 @@
 <div class="hero-image">
   <div class="hero-text">
-    <span class="heading" @slideInLeft>Hello, I'm Shehriyar Qureshi</span>
-    <span class="sub-heading" @slideInRight>and I develop Software.</span>
+    <span class="heading" @slideInLeft>{{ detailService.about.heading }}</span>
+    <span class="sub-heading" @slideInRight>{{ detailService.about.subHeading }}</span>
   </div>
 </div>
