--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -38,3 +38,19 @@
         font-size: 1.5em;
     }
 }
+
+#scroll-div {
+    font-size: 1em;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.fa {
+    font-size: 2em;
+    display: block;
+}
