--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,7 +1,15 @@
 <div class="hero-image">
   <div class="hero-text">
-    <span class="heading" [@slideInLeft] (@slideInLeft.done)="startScrollDivAnimation()">{{ detailService.about.heading }}</span>
+    <span class="heading" [@slideInLeft]
+      (@slideInLeft.done)="startScrollDivAnimation()">{{ detailService.about.heading }}</span>
     <span class="sub-heading" @slideInRight>{{ detailService.about.subHeading }}</span>
+  </div>
+  <div class="contact-buttons" @fadeIn>
+    <span id="contact-text">Contact me for a project</span>
+    <div class="d-flex justify-content-center">
+      <button mat-raised-button class="project-button" (click)="launchLink('website')">I want a website</button>
+      <button mat-raised-button class="project-button" (click)="launchLink('webapp')">I want a web app</button>
+    </div>
   </div>
   <div id="scroll-div" [@slideInDown]="showScrollDiv ? '*' : 'void'">
     <span>Scroll for more</span>
