--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -28,6 +28,9 @@
     @media only screen and (max-width: 700px) {
         font-size: 2em;
     }
+    @media only screen and (max-width: 350px) {
+        font-size: 1.5em;
+    }
 }
 
 .sub-heading {
@@ -36,6 +39,9 @@
     text-shadow: 2px 3px #000000;
     @media only screen and (max-width: 700px) {
         font-size: 1.5em;
+    }
+    @media only screen and (max-width: 350px) {
+        font-size: 1em;
     }
 }
 
@@ -48,6 +54,31 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+
+.contact-buttons {
+    display: inline-block;
+    font-size: 1em;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.project-button {
+    margin: 0 1em 0 1em;
+    color: black;
+    background-color: white;
+}
+
+#contact-text {
+    font-size: 1.3em;
+    display: block;
+    margin-bottom: 1em;
+    font-weight: 500;
 }
 
 .fa {
