--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -6,9 +6,9 @@
   </div>
   <div class="contact-buttons" @fadeIn>
     <span id="contact-text">Contact me for a project</span>
-    <div class="d-flex justify-content-center">
-      <button mat-raised-button class="project-button" (click)="launchLink('website')">I want a website</button>
-      <button mat-raised-button class="project-button" (click)="launchLink('webapp')">I want a web app</button>
+    <div class="d-flex justify-content-center button-flex">
+      <button mat-raised-button class="project-button" (click)="launchLink('website')">{{ websiteText }}</button>
+      <button mat-raised-button class="project-button" (click)="launchLink('webapp')">{{ webAppText }}</button>
     </div>
   </div>
   <div id="scroll-div" [@slideInDown]="showScrollDiv ? '*' : 'void'">
