--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,93 +1,92 @@
 .hero-image {
-    width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../../assets/images/hero.jpg);
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../../assets/images/hero.jpg);
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
-
 
 /* Place text in the middle of the image */
 
 .hero-text {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .heading {
-    display: block;
-    font-size: 3.5em;
-    text-shadow: 3px 3px #000000;
-    @media only screen and (max-width: 700px) {
-        font-size: 2em;
-    }
-    @media only screen and (max-width: 350px) {
-        font-size: 1.5em;
-    }
+  display: block;
+  font-size: 3.5em;
+  text-shadow: 3px 3px #000000;
+  @media only screen and (max-width: 700px) {
+    font-size: 2em;
+  }
+  @media only screen and (max-width: 350px) {
+    font-size: 1.5em;
+  }
 }
 
 .sub-heading {
-    display: block;
-    font-size: 2em;
-    text-shadow: 2px 3px #000000;
-    @media only screen and (max-width: 700px) {
-        font-size: 1.5em;
-    }
-    @media only screen and (max-width: 350px) {
-        font-size: 1em;
-    }
+  display: block;
+  font-size: 2em;
+  text-shadow: 2px 3px #000000;
+  @media only screen and (max-width: 700px) {
+    font-size: 1.5em;
+  }
+  @media only screen and (max-width: 350px) {
+    font-size: 1em;
+  }
 }
 
 #scroll-div {
-    font-size: 1em;
-    width: auto;
-    text-align: center;
-    position: absolute;
-    top: 95%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    
+  font-size: 1em;
+  width: auto;
+  text-align: center;
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .contact-buttons {
-    display: inline-block;
-    font-size: 1em;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+  display: inline-block;
+  font-size: 1em;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .project-button {
-    margin: 0 1em 0 1em;
-    color: black;
-    background-color: white;
+  margin: 1em;
+  width: 10em;
+  color: black;
+  background-color: white;
 }
 
 #contact-text {
-    font-size: 1.3em;
-    display: block;
-    margin-bottom: 1em;
-    font-weight: 500;
-    text-shadow: 3px 3px #000000;
+  font-size: 1.3em;
+  display: block;
+  margin-bottom: 1em;
+  font-weight: 500;
+  text-shadow: 3px 3px #000000;
 }
 
 .fa {
-    font-size: 2em;
-    display: block;
+  font-size: 2em;
+  display: block;
 }
 
 .fa:hover {
-    // cursor: pointer;
+  // cursor: pointer;
 }
