--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,69 +1,53 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body,
 html {
-    height: 100%;
-    margin: 0 auto;
+  height: 100%;
+  margin: 0 auto;
 }
 
 body {
-    font-family: Roboto;
+  font-family: Roboto;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 1.3em;
-    display: grid;
-    grid-template-columns: 30% auto;
-    a {
-        color: white;
-    }
+  width: 80%;
+  margin: 0 auto;
+  padding: 1.3em;
+  display: grid;
+  grid-template-columns: 30% auto;
+  a {
+    color: white;
+  }
 }
 
 section {
-    width: 80%;
-    margin: 0 auto;
-    padding: 2em;
+  width: 80%;
+  margin: 0 auto;
+  padding: 2em;
 }
 
 hr {
-    height: 0.2em;
-    width: 10%;
-    background-color: black;
-    margin-bottom: 10vh;
-    margin-top: 1vh;
+  height: 0.2em;
+  width: 10%;
+  background-color: black;
+  margin-bottom: 10vh;
+  margin-top: 1vh;
 }
 
 .section-heading {
-    font-size: 3em;
-    font-weight: bold;
-    display: block;
+  font-size: 3em;
+  font-weight: bold;
+  display: block;
 }
 
 .content {
-    margin-top: 5vh;
+  margin-top: 5vh;
 }
 
-@keyframes slide-in-left {
-    from {
-        margin-right: 30%;
-        opacity: 0;
-    }
-    to {
-        margin-right: 0%;
-    }
-}
-
-@keyframes slide-in-right {
-    from {
-        margin-left: 30%;
-        opacity: 0;
-    }
-    to {
-        margin-right: 0%;
-    }
+button {
+  text-transform: uppercase;
 }
