material surface for greeter

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,13 @@ hr {
 button {
   text-transform: uppercase;
 }
+
+// scrollbar
+::-webkit-scrollbar {
+  width: 0.3em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: purple; 
+    border-radius: 10%;
+}
