--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,7 +1,14 @@
+.greeter-surface {
+  height: 90vh;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 5vh;
+  padding: 0;
+}
 .hero-image {
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../../assets/images/hero.jpg);
-  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7)), url(../../../assets/images/hero.jpg);
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -49,6 +56,7 @@
   width: auto;
   text-align: center;
   position: absolute;
+  margin-top: 0;
   top: 95%;
   left: 50%;
   transform: translate(-50%, -50%);
