--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,6 @@
 <div class="projects-container text-center">
   <div class="content">
-    <span #heading class="section-heading" [@slideInLeft]="isVisible ? '*' : 'void'">Projects</span>
-    <hr #underline [@hrExtend]="isVisible2 ? '*' : 'void'">
+    <span class="section-heading">Projects</span>
     <div [ngClass]="{'grid-container-less': shouldCenterGrid === true, 'grid-container-more': shouldCenterGrid === false}">
       <app-project-card *ngFor="let project of projectService.projects" [projectDetails]="project">
       </app-project-card>
