--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,7 +1,6 @@
 <div class="skills-container text-center">
   <div class="content">
-    <span #heading class="section-heading" [@slideInLeft]="isHeadingVisible ? '*' : 'void'">Skills</span>
-    <hr #underline [@hrExtend]="isUnderlineVisible ? '*' : 'void'">
+    <span class="section-heading">Skills</span>
     <div class="d-flex justify-content-center skills-flex">
       <app-skill-card class="skill-card-selector" [skillsList]="skillService.frontendSkills" [skillTitle]="'Front-End'"></app-skill-card>
       <app-skill-card class="skill-card-selector" [skillsList]="skillService.backendSkills" [skillTitle]="'Back-End'"></app-skill-card>
