--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,9 +1,8 @@
 <mat-card class="greeter-surface justify-content-center mat-elevation-z10" [@slideInDown]>
   <div class="hero-image">
     <div class="hero-text">
-      <span class="heading" [@slideInLeft]
-        (@slideInLeft.done)="startScrollDivAnimation()">{{ detailService.about.heading }}</span>
-      <span class="sub-heading" @slideInRight>{{ detailService.about.subHeading }}</span>
+      <span class="heading">{{ detailService.about.heading }}</span>
+      <span class="sub-heading">{{ detailService.about.subHeading }}</span>
     </div>
     <div class="contact-buttons" @fadeIn>
       <span id="contact-text">Contact me for a project</span>
