add shadow and modify project cards a bit

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="project-card">
+<mat-card class="project-card mat-elevation-z3">
   <mat-card-title>
     <div>
       <div class="image" [style.background-image]="backgroundImageValue">
