--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -1,29 +1,32 @@
 .project-card {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+  padding: 0 !important;
+  border-radius: 0.5em;
+  overflow: hidden;
 }
 
 .image {
-    height: 0;
-    padding-top: 56.25%;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    width: 100%;
-    position: relative;
+  height: 0;
+  padding-top: 56.25%;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  position: relative;
 }
 
 .project-name {
-    display: block;
-    font-size: 2em;
-    font-weight: bold;
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .project-description {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .fa {
-    margin-top: 0.5em;
-    font-size: 3em;
-    color: #673ab7;
+  margin-top: 0.5em;
+  font-size: 3em;
+  color: #673ab7;
 }
