use material button for download resume

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
     </div>
     <div #projectTalk class="project-talk-container">
       <a href="assets/downloads/shehriyarQureshi.pdf" download="">
-        <button class="btn btn-outline-primary resume-button">Download Resume</button>
+        <button mat-raised-button>Download Resume</button>
       </a>
     </div>
   </div>
