use grid system for projects and add proj. award

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -2,6 +2,7 @@
   <mat-card-title>
     <div>
       <div class="image" [style.background-image]="backgroundImageValue">
+        <img src="../../../{{ projectDetails.awards.image }}" alt="" *ngIf="projectDetails.awards" class="award">
       </div>
     </div>
   </mat-card-title>
