--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -1,7 +1,9 @@
 .project-card {
   height: 100%;
   width: 100%;
-  padding: 0 !important;
+  padding-top: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
   border-radius: 0.5em;
   overflow: hidden;
 }
@@ -29,4 +31,14 @@
   margin-top: 0.5em;
   font-size: 3em;
   color: #673ab7;
+}
+
+.award {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 35%;
+  @media only screen and (max-width: 450px) {
+    width: 80%;
+  }
 }
