add recommendation section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-greeter></app-greeter>
 <app-projects></app-projects>
+<app-recommendations></app-recommendations>
 <app-skills></app-skills>
 <app-contact></app-contact>
