--- a/src/app/components/recommendations/recommendations.component.html
+++ b/src/app/components/recommendations/recommendations.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <h1 class="section-heading">Recommendations</h1>
+    <h1 class="section-heading">Reviews</h1>
 </div>
 <div class="container-fluid">
     <div class="row" *ngIf="isSingleRecommendation">
