use grid system for the whole layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,19 @@
-<app-greeter></app-greeter>
-<app-projects></app-projects>
-<app-recommendations></app-recommendations>
-<app-skills></app-skills>
-<app-contact></app-contact>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <app-greeter></app-greeter>
+        </div>
+        <div class="col-12">
+            <app-projects></app-projects>
+        </div>
+        <div class="col-12">
+            <app-recommendations></app-recommendations>
+        </div>
+        <div class="col-12">
+            <app-skills></app-skills>
+        </div>
+        <div class="col-12 nopadding">
+            <app-contact></app-contact>
+        </div>
+    </div>
+</div>
