--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,22 +1,15 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <mat-card class="greeter-surface justify-content-center mat-elevation-z10" [@slideInDown]>
-        <div class="hero-image">
-          <div class="hero-text">
-            <span class="heading">{{ detailService.about.heading }}</span>
-            <span class="sub-heading">{{ detailService.about.subHeading }}</span>
-          </div>
-          <div class="contact-buttons" @fadeIn>
-            <span id="contact-text">Contact me for a project</span>
-            <div class="d-flex justify-content-center button-flex">
-              <button mat-raised-button class="project-button"
-                (click)="launchLink('website')">{{ websiteText }}</button>
-              <button mat-raised-button class="project-button" (click)="launchLink('webapp')">{{ webAppText }}</button>
-            </div>
-          </div>
-        </div>
-      </mat-card>
+<mat-card class="greeter-surface justify-content-center mat-elevation-z10" [@slideInDown]>
+  <div class="hero-image">
+    <div class="hero-text">
+      <span class="heading">{{ detailService.about.heading }}</span>
+      <span class="sub-heading">{{ detailService.about.subHeading }}</span>
+    </div>
+    <div class="contact-buttons" @fadeIn>
+      <span id="contact-text">Contact me for a project</span>
+      <div class="d-flex justify-content-center button-flex">
+        <button mat-raised-button class="project-button" (click)="launchLink('website')">{{ websiteText }}</button>
+        <button mat-raised-button class="project-button" (click)="launchLink('webapp')">{{ webAppText }}</button>
+      </div>
     </div>
   </div>
-</div>
+</mat-card>
