--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -8,7 +8,7 @@
 
 .hero-image {
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7)), url(../../../assets/images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../../assets/images/hero.jpg);
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -98,4 +98,8 @@
 
 .fa:hover {
   // cursor: pointer;
+}
+
+.contact {
+  margin-top: 5em;
 }
