--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,7 @@ body,
 html {
   height: 100%;
   margin: 0 auto;
-}
-
-body {
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
