add snapchat and insta links

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,6 +5,8 @@
       <a href="{{ links.github }}" class="fa fa-github"></a>
       <a href="{{ links.medium }}" class="fa fa-medium"></a>
       <a href="{{ links.linkedin }}" class="fa fa-linkedin"></a>
+      <a href="{{ links.snapchat }}" class="fa fa-snapchat"></a>
+      <a href="{{ links.instagram }}" class="fa fa-instagram"></a>
       <a href="{{ links.email }}" class="fa fa-envelope"></a>
     </div>
     <div #projectTalk class="project-talk-container">
