remove "download resume" button

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,13 +9,8 @@
       <a href="{{ links.instagram }}" class="fa fa-instagram"></a>
       <a href="{{ links.email }}" class="fa fa-envelope"></a>
     </div>
-    <div class="mt-5">
+    <div #phoneNumber class="mt-5">
       <span class="phone-number">Phone: +92 334 0004051</span>
-    </div>
-    <div #projectTalk class="project-talk-container">
-      <a href="assets/downloads/shehriyarQureshi.pdf" download="">
-        <button mat-raised-button>Download Resume</button>
-      </a>
     </div>
   </div>
 </div>
