--- a/src/app/components/greeter/greeter.component.scss
+++ b/src/app/components/greeter/greeter.component.scss
@@ -1,3 +1,20 @@
+.container-fluid {
+  height: 100vh;
+}
+
+.introduction-text {
+  font-size: 72px;
+  color: #ffffff;
+}
+
+.emphasis-role {
+  color: #ff9494;
+}
+
+.emphasis-place {
+  color: #94fff2;
+}
+
 .greeter-surface {
   height: 90vh;
   margin-top: 5vh;
