--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,75 +1,3 @@
-.introduction-card {
-  max-width: 90%;
-  margin: 4px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 3%;
-}
-
-.my-story {
-  max-width: 90%;
-  margin: 4px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 3%;
-}
-
-.my-work-experience {
-  max-width: 90%;
-  margin: 4px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-
-.home-setup-card {
-  max-width: 90%;
-  margin: 4px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-
-.skills-container {
-  display: flex;
-  justify-content: center;
-  @media screen and (max-width: 800px) {
-    flex-direction: column;
-  }
-}
-
-.skill-card {
-  margin: 0.5em;
-  width: 80%;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  @media screen and (max-width: 800px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.experience-container {
-  display: flex;
-  justify-content: center;
-  @media screen and (max-width: 800px) {
-    flex-direction: column;
-  }
-}
-
-.experience-card {
-  margin: 0.5em;
-  width: 80%;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  @media screen and (max-width: 800px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
+.name-heading {
+    font-family: 'Quicksand', sans-serif;
 }
