--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,16 +4,17 @@
             <app-greeter></app-greeter>
         </div>
         <div class="col-12 mt-3 mb-3">
-            <app-projects></app-projects>
+            <!-- <app-projects></app-projects> -->
+            <app-about></app-about>
         </div>
-        <div class="col-12 mt-3 mb-3">
+        <!-- <div class="col-12 mt-3 mb-3">
             <app-recommendations></app-recommendations>
-        </div>
-        <div class="col-12 mt-3 mb-3">
+        </div> -->
+        <!-- <div class="col-12 mt-3 mb-3">
             <app-skills></app-skills>
-        </div>
-        <div class="col-12 nopadding mt-3">
+        </div> -->
+        <!-- <div class="col-12 nopadding mt-3">
             <app-contact></app-contact>
-        </div>
+        </div> -->
     </div>
 </div>
