--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,17 +4,13 @@
             <app-greeter></app-greeter>
         </div>
         <div class="col-12 mt-3 mb-3">
-            <!-- <app-projects></app-projects> -->
             <app-about></app-about>
         </div>
-        <!-- <div class="col-12 mt-3 mb-3">
-            <app-recommendations></app-recommendations>
-        </div> -->
-        <!-- <div class="col-12 mt-3 mb-3">
-            <app-skills></app-skills>
-        </div> -->
-        <!-- <div class="col-12 nopadding mt-3">
+        <div class="col-12 nopadding mt-3 mb-5">
             <app-contact></app-contact>
-        </div> -->
+        </div>
+        <div class="col-12 nopadding mt-3">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
