--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 mt-4 mb-4 text-center">
-            <span style="color: white;">Developed by human, for humans</span>
+            <span style="color: white;">Hard work always pays off</span>
         </div>
     </div>
 </div>
