--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="offset-3 col-6 text-center">
+    <div class="offset-3 col-6 mb-5 text-center">
       <span style="font-size: 96px; color: white;">Stay connected</span>
     </div>
     <div class="col-12"></div>
