--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,12 +1,17 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="offset-1 col-4 align-items-center">
-            <span style="font-size: 288px; color: #ffffff;">Hey,</span>
+    <div class="row h-100 align-items-center">
+        <!-- TODO(Shehriyar): Try using nested column, outer column centered, inner for alignment -->
+        <div class="offset-1 col-10">
+            <span style="font-size: 288px; color: #ffffff; display: block;">Hey,</span>
+            <div class="text-right">
+                <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
+                        Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
+            </div>
         </div>
-        <div class="offset-5 col-6 text-right">
-            <span class="introduction-text" style="text-align-last: right; text-align: justify;">I'm a <span
+        <!-- <div class="offset-5 col-6 text-right">
+            <span class="introduction-text">I'm a <span
           class="emphasis-role">Self-Taught Software
           Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
-        </div>
+        </div> -->
     </div>
 </div>
