--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 mb-3">
             <app-greeter></app-greeter>
         </div>
-        <div class="col-12 mt-3 mb-3">
+        <div class="col-12 mb-3">
             <app-about></app-about>
         </div>
         <div class="col-12 nopadding mt-3 mb-5">
