--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -1,17 +1,12 @@
-<div class="container-fluid">
+<div class="container-fluid w-100">
     <div class="row h-100 align-items-center">
         <!-- TODO(Shehriyar): Try using nested column, outer column centered, inner for alignment -->
-        <div class="offset-1 col-10">
-            <span style="font-size: 288px; color: #ffffff; display: block;">Hey,</span>
-            <div class="text-right">
+        <div class="offset-1 col-md-10">
+            <span class="salutation">Hey,👋</span>
+            <div class="text-md-right text-sm-left">
                 <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
                         Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
             </div>
         </div>
-        <!-- <div class="offset-5 col-6 text-right">
-            <span class="introduction-text">I'm a <span
-          class="emphasis-role">Self-Taught Software
-          Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
-        </div> -->
     </div>
 </div>
