--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,22 +4,12 @@ html {
   height: 100%;
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
+  font-size: 62.5%;
   background-color: #393737;
 }
 
 a {
   text-decoration: none;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 1.3em;
-  display: grid;
-  grid-template-columns: 30% auto;
-  a {
-    color: white;
-  }
 }
 
 section {
