color scheme update change background to shade of white

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div class="row">
         <div class="offset-1 col-10 text-center name-heading mb-5">
-            <span style="font-size: 144px; color: white;">Shehriyar Qureshi</span>
+            <span style="font-size: 144px; color: #444444;">Shehriyar Qureshi</span>
         </div>
         <div class="offset-1 col-6 align-self-center">
-            <span style="font-size: 36px; color: white;">Documenting my journey as a young developer without a degree. 
+            <span style="font-size: 36px; color: #444444;">Documenting my journey as a young developer without a degree.
                 Confident in my craft with skills that speak for themselves.
-                 Mentoring soon-to-be devs and instilling work ethic.
-                  I want you to know that I’m <span style="font-size: 36px; color: #FF7E7E;"> thatdevsherry</span></span>
+                Mentoring soon-to-be devs and instilling work ethic.
+                I <span style="font-weight: bold;"> want </span>you to know that I’m thatdevsherry</span>
         </div>
         <div class="offset-1 col-3">
             <img src="../../assets/images/profile_picture.jpg" alt="" class="img-fluid">
