--- a/src/app/components/greeter/greeter.component.html
+++ b/src/app/components/greeter/greeter.component.html
@@ -2,7 +2,7 @@
     <div class="row h-100 align-items-center">
         <!-- TODO(Shehriyar): Try using nested column, outer column centered, inner for alignment -->
         <div class="offset-1 col-md-10">
-            <span class="salutation">Hey,👋</span>
+            <span class="salutation">Hey,</span>
             <div class="text-md-right text-sm-left">
                 <span class="introduction-text">I'm a <span class="emphasis-role">Self-Taught Software
                         Engineer</span> from <span class="emphasis-place">Pakistan</span></span>
