--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,11 @@
         <div class="col-12 mb-3">
             <app-about></app-about>
         </div>
-        <div class="col-12 nopadding mt-3 mb-5">
+        <!-- <div class="col-12 nopadding mt-3 mb-5">
             <app-contact></app-contact>
-        </div>
-        <div class="col-12 nopadding mt-3">
+        </div> -->
+        <!-- <div class="col-12 nopadding mt-3">
             <app-footer></app-footer>
-        </div>
+        </div> -->
     </div>
 </div>
