--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,9 @@
         <div class="col-12 mb-3">
             <app-about></app-about>
         </div>
+        <div class="col-12 mb-3">
+            <app-companies-worked></app-companies-worked>
+        </div>
         <!-- <div class="col-12 nopadding mt-3 mb-5">
             <app-contact></app-contact>
         </div> -->
